--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@types/fabric": "^4.5.11",
     "@types/react-router-dom": "^5.3.3",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "sass": "^1.55.0"
   }
 }
