--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
   "trailingComma": "es5",
   "tabWidth": 2,
-  "semi": false,
+  "semi": true,
+  "bracketSpacing": true,
+  "arrowParens": "always",
   "singleQuote": false
 }
