--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@types/node": "^18.6.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "express": "^4.18.2",
     "fabric": "^5.2.1",
     "howler": "^2.2.3",
+    "http-proxy-middleware": "^2.0.6",
+    "md5": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "pixi.js": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
