--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.6",
     "express": "^4.18.2",
     "fabric": "^5.2.1",
+    "hammerjs": "^2.0.8",
     "howler": "^2.2.3",
     "http-proxy-middleware": "^2.0.6",
     "md5": "^2.3.0",
