--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
   },
   "devDependencies": {
     "@types/fabric": "^4.5.11",
+    "@types/hammerjs": "^2.0.41",
     "@types/react-router-dom": "^5.3.3",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "2.7.1",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "vconsole": "^3.15.0"
   }
 }
